--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Party Agency Links</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
     body {
       margin: 0;
       height: 100vh;
@@ -15,14 +16,14 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       padding: 40px 20px;
-      overflow: hidden;
+      overflow-x: hidden;
       text-align: center;
       position: relative;
     }
 
-    /* Конфети анимация */
+    /* Конфети */
     .confetti {
       position: fixed;
       width: 100%;
@@ -58,30 +59,17 @@
 
     /* Лого */
     .logo {
-  width: 350px;
-  height: 350px;
-  /* махаме background-color и border-radius */
-  background-color: transparent;
-  border-radius: 0;
-  margin-bottom: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 700;
-  font-size: 26px;
-  color: #7873f5;
-  user-select: none;
-  z-index: 1;
-  box-shadow: none;
-}
-
-
-    h1 {
-      margin-bottom: 35px;
-      font-weight: 700;
-      font-size: 32px;
-      text-shadow: 0 0 10px rgba(0,0,0,0.3);
+      width: 250px;
+      max-width: 80vw;
+      height: auto;
+      margin-bottom: 30px;
       z-index: 1;
+    }
+
+    .logo img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
 
     .links {
@@ -115,26 +103,41 @@
     }
 
     .link-btn img {
-      width: 56px;
-      height: 56px;
+      width: 40px;
+      height: 40px;
       object-fit: contain;
       flex-shrink: 0;
+    }
+
+    @media (max-width: 480px) {
+      .link-btn {
+        font-size: 18px;
+        padding: 12px 18px;
+      }
+
+      .link-btn img {
+        width: 32px;
+        height: 32px;
+      }
+
+      .logo {
+        width: 140px;
+        margin-bottom: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="logo">
-  <img src="logo.png" alt="Лого" style="width: 100%; height: 100%; border-radius: 50%;" />
-</div>
-
+    <img src="logo.png" alt="Лого" />
+  </div>
 
   <div class="links">
-  <a href="https://facebook.com/61556797032609/" target="_blank" class="link-btn" rel="noopener noreferrer">
-  <img src="facebook.png" alt="Facebook" />
-  Facebook
-</a>
-
+    <a href="https://facebook.com/61556797032609/" target="_blank" class="link-btn" rel="noopener noreferrer">
+      <img src="facebook.png" alt="Facebook" />
+      Facebook
+    </a>
     <a href="https://www.instagram.com/veseliya.s.kameliya" target="_blank" class="link-btn" rel="noopener noreferrer">
       <img src="instagram.png" alt="Instagram" />
       Instagram
